# safetensors-browser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  input.rs  main.rs  metadata.rs  models.rs  repo.rs  utils.rs
