[package]
name = "safetensors-browser"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
hf-hub = "0.4.1"
indicatif = "0.17.9"
memmap2 = "0.9.5"
num-bigint = "0.4.6"
ratatui = "0.29.0"
reqwest = "0.12.12"
safetensors = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.43.0"
